--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 						</div>
 					</div> <!-- /folio-item -->
 
-					<div class="bgrid folio-item">
+				<!--	<div class="bgrid folio-item">
 						<div class="item-wrap">
 							<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
 							<a href="#modal-02" class="overlay">
@@ -488,7 +488,7 @@
 								</div>
 							</a>
 						</div>
-					</div> <!-- /folio-item -->
+					</div>  -->
 
 					
 					<!-- modal popups - begin
@@ -508,11 +508,11 @@
 
 						<div class="link-box">
 							<a href="http://www.behance.net">Details</a>
-							<a href="#" class="popup-modal-dismiss">Close</a>
+							<a href="#" class="popup-modal-dismiss">Fermer</a>
 						</div>
 
 					</div> <!-- /modal-01 -->
-
+					<!--
 					<div id="modal-02" class="popup-modal slider mfp-hide">
 
 						<div class="media">
@@ -532,7 +532,7 @@
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
-					</div> <!-- /modal-02 -->
+					</div>  /modal-02 -->
 
 				</div> <!-- /portfolio-wrapper -->
 
