--- a/index.html
+++ b/index.html
@@ -261,85 +261,85 @@
 
 					</div> <!-- /timeline-block -->
 
-				<div class="timeline-block">
+					<div class="timeline-block">
 
-					<div class="timeline-ico">
-						<i class="fa fa-graduation-cap"></i>
-					</div>
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
 
-					<div class="timeline-header">
-						<h3>Employée polyvalente</h3>
-						<p>Mai 2021 - Juillet 2021</p>
-					</div>
+						<div class="timeline-header">
+							<h3>Employée polyvalente</h3>
+							<p>Mai 2021 - Juillet 2021</p>
+						</div>
 
-					<div class="timeline-content">
-						<h4>LIDL</h4>
-						<p>Saint-Alban</p>
+						<div class="timeline-content">
+							<h4>LIDL</h4>
+							<p>Saint-Alban</p>
 
-					</div>
+						</div>
 
-				</div> <!-- /timeline-block -->
+					</div> <!-- /timeline-block -->
 
-				<div class="timeline-block">
+					<div class="timeline-block">
 
-					<div class="timeline-ico">
-						<i class="fa fa-graduation-cap"></i>
-					</div>
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
 
-					<div class="timeline-header">
-						<h3>Aidant Familial</h3>
-						<p>2019 - 2020</p>
-					</div>
+						<div class="timeline-header">
+							<h3>Aidant Familial</h3>
+							<p>2019 - 2020</p>
+						</div>
 
-					<div class="timeline-content">
-						<h4></h4>
-						<p>Saint-Alban</p>
+						<div class="timeline-content">
+							<h4></h4>
+							<p>Saint-Alban</p>
 
-					</div>
+						</div>
 
-				</div> <!-- /timeline-block -->
+					</div> <!-- /timeline-block -->
 
-				<div class="timeline-block">
+					<div class="timeline-block">
 
-					<div class="timeline-ico">
-						<i class="fa fa-graduation-cap"></i>
-					</div>
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
 
-					<div class="timeline-header">
-						<h3>Programmatrice CPA</h3>
-						<p>Aout 2018 - Décembre 2018</p>
-					</div>
+						<div class="timeline-header">
+							<h3>Programmatrice CPA</h3>
+							<p>Aout 2018 - Décembre 2018</p>
+						</div>
 
-					<div class="timeline-content">
-						<h4> ENEDIS</h4>
-						<p>Le Chesnay</p>
+						<div class="timeline-content">
+							<h4> ENEDIS</h4>
+							<p>Le Chesnay</p>
 
-					</div>
+						</div>
 
-				</div> <!-- /timeline-block -->
+					</div> <!-- /timeline-block -->
 
-				<div class="timeline-block">
+					<div class="timeline-block">
 
-					<div class="timeline-ico">
-						<i class="fa fa-graduation-cap"></i>
-					</div>
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
 
-					<div class="timeline-header">
-						<h3>Appui au management</h3>
-						<p>Juillet 2018</p>
-					</div>
+						<div class="timeline-header">
+							<h3>Appui au management</h3>
+							<p>Juillet 2018</p>
+						</div>
 
-					<div class="timeline-content">
-						<h4>Maxi Toys</h4>
-						<p>Garges-lès-Gonesse</p>
+						<div class="timeline-content">
+							<h4>Maxi Toys</h4>
+							<p>Garges-lès-Gonesse</p>
 
-					</div>
+						</div>
 
-				</div> <!-- /timeline-block -->
+					</div> <!-- /timeline-block -->
 
-			</div> <!-- /timeline-wrap -->
+				</div> <!-- /timeline-wrap -->
 
-		</div> <!-- /col-twelve -->
+			</div> <!-- /col-twelve -->
 
 		</div> <!-- /resume-timeline -->
 
@@ -474,7 +474,7 @@
 						</div>
 					</div> <!-- /folio-item -->
 
-				<!--	<div class="bgrid folio-item">
+					<!--	<div class="bgrid folio-item">
 						<div class="item-wrap">
 							<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
 							<a href="#modal-02" class="overlay">
@@ -490,7 +490,7 @@
 						</div>
 					</div>  -->
 
-					
+
 					<!-- modal popups - begin
 	            ============================================================= -->
 					<div id="modal-01" class="popup-modal slider mfp-hide">
@@ -501,7 +501,10 @@
 
 						<div class="description-box">
 							<h4>Booky</h4>
-							<p>Le but de ce site est d'éviter de racheter plusieurs fois un livre. En effet, il est courant d'oublier que l'on possède déjà un livre que l'on souhaite lire. La bibliothèque virtuelle permettra aux utilisateurs de garder une trace de leurs lectures et de leurs prêts.</p>
+							<p>Le but de ce site est d'éviter de racheter plusieurs fois un livre. En effet, il est
+								courant d'oublier que l'on possède déjà un livre que l'on souhaite lire. La bibliothèque
+								virtuelle permettra aux utilisateurs de garder une trace de leurs lectures et de leurs
+								prêts.</p>
 
 							<div class="categories">Application Web</div>
 						</div>
@@ -551,7 +554,8 @@
 
 			<div class="col-twelve section-ads">
 
-				<h2 class="h01">“N'importe quel idiot peut écrire du code qu'un ordinateur peut comprendre. Les bons programmeurs écrivent du code que les humains peuvent comprendre.”</h2>
+				<h2 class="h01">“N'importe quel idiot peut écrire du code qu'un ordinateur peut comprendre. Les bons
+					programmeurs écrivent du code que les humains peuvent comprendre.”</h2>
 
 				<p class="lead">
 					Martin Fowler
@@ -587,17 +591,15 @@
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-earth"></i></span>
+					<span class="icon"><i class="icon-window"></i></span>
 
 					<div class="service-content">
 
-						<h3>Webdesign</h3>
+						<h3><a href="hhttps://trustmyscience.com/outil-ia-permet-identifier-risque-infarctus-10-ans-avance/"
+								style="color: white">Trust My Science</a></h3>
 
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
-						</p>
+						<p class="desc">Une nouvelle IA permet d’identifier un risque d’infarctus jusqu’à 10 ans à
+							l’avance.</p>
 
 					</div>
 
@@ -609,12 +611,27 @@
 
 					<div class="service-content">
 
-						<h3>Web Development</h3>
+						<h3><a href="https://trustmyscience.com/crispr-modification-genetique-des-cellules-tests-sur-l-homme/"
+								style="color: white">Trust My Science</a></h3>
 
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
+						<p class="desc">Le système CRISPR modifiant génétiquement des cellules a été testé pour la
+							première fois sur l’homme.</p>
+
+					</div>
+
+				</div> <!-- /service -->
+
+				<div class="service">
+
+					<span class="icon"><i class="icon-window"></i></span>
+
+					<div class="service-content">
+
+						<h3><a href="https://trustmyscience.com/essai-clinique-montre-cellules-immunitaires-genetiquement-modifiees-sont-sans-danger/"
+								style="color: white">Trust My Science</a></h3>
+
+						<p class="desc">CANCER. Un essai clinique suggère que l’édition génétique CRISPR pourrait être
+							un traitement viable.
 						</p>
 
 					</div>
@@ -623,17 +640,13 @@
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-paint-brush"></i></span>
+					<span class="icon"><i class="icon-earth"></i></span>
 
 					<div class="service-content">
 
-						<h3>Branding</h3>
+						<h3><a href="https://www.ticsante.com/story?ID=6955" style="color: white">Tic Santé</a></h3>
 
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
-						</p>
+						<p class="desc">IA en imagerie médicale: Incepto s'allie à Keymaging.</p>
 
 					</div>
 
@@ -641,17 +654,14 @@
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-toggles"></i></span>
+					<span class="icon"><i class="icon-earth"></i></span>
 
 					<div class="service-content">
 
-						<h3>UI/UX Design</h3>
+						<h3><a href="https://www.ticsante.com/story?ID=6950" style="color: white">Tic Santé</a></h3>
 
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
-						</p>
+						<p class="desc">L'Académie de médecine invite les rythmologues à se former mieux et plus vite à
+							la maîtrise de l'intelligence artificielle.</p>
 
 					</div>
 
@@ -659,35 +669,14 @@
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-image"></i></span>
+					<span class="icon"><i class="icon-earth"></i></span>
 
 					<div class="service-content">
 
-						<h3>Graphics Design</h3>
+						<h3><a href="https://www.ticsante.com/story?ID=6869" style="color: white">Tic Santé</a></h3>
 
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-chat"></i></span>
-
-					<div class="service-content">
-
-						<h3>Consultancy</h3>
-
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
-						</p>
+						<p class="desc">Chirurgie bariatrique: le CHU de Lille et l'Inria dévoilent un outil d'IA pour
+							calculer la perte de poids à long terme.</p>
 
 					</div>
 
@@ -937,7 +926,9 @@
 			<div class="col-six tab-full pull-right social">
 
 				<ul class="footer-social">
-					<li><a href="https://fr.linkedin.com/in/l%C3%A9a-venturoli-448263211?trk=people-guest_people_search-card"><i class="fa fa-linkedin"></i></a></li>
+					<li><a
+							href="https://fr.linkedin.com/in/l%C3%A9a-venturoli-448263211?trk=people-guest_people_search-card"><i
+								class="fa fa-linkedin"></i></a></li>
 					<li><a href="https://github.com/LeaVenturoli/Portfolio"><i class="fa fa-github"></i></a></li>
 				</ul>
 
