--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!--- basic page needs
    ================================================== -->
 	<meta charset="utf-8">
-	<title>Sommaire</title>
+	<title>Portfolio Léa Venturoli</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -191,8 +191,7 @@
 
 		<div class="row button-section">
 			<div class="col-twelve">
-				<a href="../images/CV_Lea_Venturoli.pdf" title="Download CV" class="button button-primary">Download
-					CV</a>
+				<a href="../images/CV_Lea_Venturoli.pdf" title="Download CV" class="button button-primary">Télécharger le CV</a>
 			</div>
 		</div>
 
@@ -443,10 +442,10 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>Projets</h5>
-				<h1>Les deux projets majeur.</h1>
+				<h5>Projet</h5>
+				<h1>Projet majeur.</h1>
 
-				<p class="lead">Voici les deux plus gros projets effectués au cours de cette deuxième année de bts.</p>
+				<p class="lead">Voici le projet effectué au cours de cette deuxième année de bts.</p>
 
 			</div>
 		</div> <!-- /section-intro-->
@@ -579,6 +578,7 @@
 
 				<h5>Veille technologique</h5>
 				<h1>La technologie dans le monde médical</h1>
+				<p>Es ce que le but ultime n'est pas de réussir un jour à mourrir en bonne santé ? </br> Il me semble important que la médecine fasse des progrès pour atténuer la souffrance des malades. L'idée que tous corps abimés puissent être réparés, </br> une utopie ? </br> Cette veille technologique me permet de voir que chaque jour la médecine progresse dans toutes les spécialités médicales. </p>
 
 				<p class="lead"></p>
 
@@ -595,7 +595,7 @@
 
 					<div class="service-content">
 
-						<h3><a href="hhttps://trustmyscience.com/outil-ia-permet-identifier-risque-infarctus-10-ans-avance/"
+						<h3><a href="https://trustmyscience.com/outil-ia-permet-identifier-risque-infarctus-10-ans-avance/"
 								style="color: white">Trust My Science</a></h3>
 
 						<p class="desc">Une nouvelle IA permet d’identifier un risque d’infarctus jusqu’à 10 ans à
