--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 		<div class="row button-section">
 			<div class="col-twelve">
-				<a href="D:\PC portable\Cours\SIO\Deuxieme annee\E4-Support et mise a disposition\Porte-folio\Essai 3\kards-master\kards-master\images\CV_Lea_Venturoli.pdf" title="Download CV" class="button button-primary">Télécharger le CV</a>
+				<a href="CV_Lea_Venturoli.pdf" title="Download CV" class="button button-primary">Télécharger le CV</a>
 			</div>
 		</div>
 
