--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 		<div class="row button-section">
 			<div class="col-twelve">
-				<a href="images\CV_Lea_Venturoli.pdf" title="Download CV" class="button button-primary">Télécharger le CV</a>
+				<a href="..\images\CV_Lea_Venturoli.pdf" title="Download CV" class="button button-primary">Télécharger le CV</a>
 			</div>
 		</div>
 
